feat: add github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         node-version: "14.x"
 
-    - name: Hexo Generate
+    - name: build
       run: |
         rm -f .yarnclean
         yarn --frozen-lockfile --ignore-engines --ignore-optional --non-interactive --silent --ignore-scripts --production=false
@@ -27,16 +27,9 @@ jobs:
         yarn run hexo clean
         yarn run hexo generate
 
-    - name: Hexo Deploy
-      env:
-        SSH_PRIVATE: ${{ secrets.SSH_PRIVATE }}
-        GIT_NAME: Cloud
-        GIT_EMAIL: kt286@qq.com
-      run: |
-        mkdir -p ~/.ssh/
-        echo "$SSH_PRIVATE" | tr -d '\r' > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-        git config --global user.name "$GIT_NAME"
-        git config --global user.email "$GIT_EMAIL"
-        yarn run hexo deploy
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@v4.2.2
+      with:
+        branch: gh-pages
+        folder: public
+        ssh-key: ${{ secrets.SSH_PRIVATE }}
