feat: add rss support

--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,14 @@ theme: fluid
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+feed:
+  type:
+    - atom
+    - rss2
+  path:
+    - atom.xml
+    - rss.xml
+  limit: 20
+  content: true
+  
