--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://kt286.com
+url: https://blog.kt286.com
 permalink: post/:title/
 permalink_defaults:
 pretty_urls:
