--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -874,8 +874,8 @@ about:
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/kt286", tip: "GitHub" }
-    - { class: "iconfont icon-bilibili", link: "https://space.bilibili.com/397095512", tip: "bilibili" }
-    - { class: "iconfont icon-rss", link: "https://blog.kt286.com/rss.xml", tip: "RSS"  }
+    - { class: "iconfont icon-mail", link: "mailto:kt286@qq.com", tip: "Mail" }
+    - { class: "iconfont icon-rss-fill", link: "https://blog.kt286.com/rss.xml", tip: "RSS"  }
 
 
 #---------------------------
