--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -18,11 +18,11 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: /img/avatar/kt286.png
+favicon: /img/favicon.png
 
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: /img/avatar/kt286.png
+apple_touch_icon: /img/favicon.png
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 # Title separator in browser tab, eg: article - site
@@ -303,16 +303,16 @@ navbar:
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
   ground_glass:
-    enable: false
+    enable: true
 
     # 模糊像素，只能为数字，数字越大模糊度越高
     # Number of blurred pixel. the larger the number, the higher the blur
-    px: 3
+    px: 5
 
     # 不透明度，数字越大透明度越低，注意透明过度可能看不清菜单字体
     # Ratio of opacity, 1.0 is completely opaque
     # available: 0 - 1.0
-    alpha: 0.7
+    alpha: 0.6
 
   # 导航栏菜单，可自行增减，key 用来关联 languages/*.yml，如不存在关联则显示 key 本身的值；icon 是 css class，可以省略；增加 name 可以强制显示指定名称
   # Navigation bar menu. `key` is used to associate languages/*.yml. If there is no association, the value of `key` itself will be displayed; if `icon` is a css class, it can be omitted; adding `name` can force the display of the specified name
@@ -437,7 +437,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -509,7 +509,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
 
@@ -803,7 +803,7 @@ cusdis:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
   subtitle:
@@ -815,7 +815,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
   subtitle:
@@ -845,7 +845,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
   subtitle:
@@ -863,17 +863,18 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
   subtitle:
-  avatar: /img/avatar/kt286.png
+  avatar: /img/avatar/kt286.jpg
   name: "kt286"
   intro: "追求卓越，成功在不经意间就会追上你的步伐！"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/kt286", tip: "GitHub" }
+    - { class: "iconfont icon-telegram-fill", link: "https://t.me/kt286", tip: "Telegram" }
     - { class: "iconfont icon-mail", link: "mailto:kt286@qq.com", tip: "Mail" }
     - { class: "iconfont icon-rss-fill", link: "https://blog.kt286.com/rss.xml", tip: "RSS"  }
 
@@ -886,7 +887,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
 
@@ -897,7 +898,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
   subtitle: "Page not found"
@@ -909,7 +910,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/background.jpg
+  banner_img: /img/background1.jpg
   banner_img_height: 40
   banner_mask_alpha: 0.3
   subtitle:
