fix: fluid blog avatar

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -921,7 +921,7 @@ links:
       title: "Fluid Blog",
       intro: "主题博客",
       link: "https://hexo.fluid-dev.com/",
-      avatar: "/img/favicon.png"
+      avatar: "/img/avatar/fluid.png"
     }
     - {
       title: "DIYgod",
